# llm4codesec-framework

./: .default.env  .dockerignore  .gitignore  .gitmodules  COPILOT_INSTRUCTIONS.md  Dockerfile  README.md  build_docker.bat  build_docker.sh  docker-compose.yml  output.txt  pyproject.toml  run_full_benchmark.sh  run_small_models_benchmark.sh
benchmarks/: combinations_sweep_analysis.ipynb  compare_rankings_analysis_online.ipynb  compare_rankings_analysis_vllm.ipynb  compare_rankings_vllm_summary.csv  context_assembler_analysis.ipynb  context_assembler_compare_rankings_analysis.ipynb  context_assembler_investigation.ipynb  context_assembler_v2_analysis.ipynb  sampling_sweep_analysis.ipynb  self_consistency_analysis.ipynb
benchmarks/ContextAssembler/: cvefixes_context_benchmark.json  cvefixes_context_benchmark_extended_context.json
docs/: CASTLE_README.md  CVEFIXES_README.md  DOCKER_QUICK_REFERENCE.md  DOCKER_README.md  JITVUL_README.md  USAGE_EXAMPLES.md  VPC_SETUP.md  VULBENCH_README.md  VULDETECTBENCH_README.md  VULNERABILITYDETECTION_README.md
results/castle_experiments/: experiment_plan_results.json
results/context_assembler_compare_rankings_experiments/compare_prompts_qwen3_8b/: experiment_plan_results.json
results/context_assembler_compare_rankings_experiments/self_consistency/: experiment_plan_results.json
results/context_assembler_compare_rankings_experiments/vllm_compare_rankings/: experiment_plan_results.json  experiment_plan_results_strict_exploitable_security.json
results/context_assembler_experiments/v2_comparison/: experiment_plan_results.json
results/context_assembler_experiments/vllm_big_models_comparison/: experiment_plan_results.json
results/context_assembler_experiments/vllm_comparison/: experiment_plan_results.json
results/context_assembler_experiments/vllm_problematic_big_models/: experiment_plan_results.json
results/cvefixes_experiments/: experiment_plan_results.json
results/jitvul_experiments/: experiment_plan_results.json
scripts/: check_missing_final_answer.py  download_primevul.py  run_build_datasets.sh  run_context_assembler.sh  run_context_assembler_compare_rankings.sh  run_context_assembler_compare_rankings_rtx6000pro.sh  run_parameter_sweeps.sh  setup_github_clone_and_run.sh
src/: cli.py  consts.py  flash_attention.py  logging_tools.py
src/benchmark/: benchmark_framework.py  benchmark_runner.py  config.py  config_manager.py  enums.py  metrics_calculator.py  models.py  prompt_generator.py  response_parser.py  result_processor.py  result_types.py  results.py  run_experiment.py
src/benchmark/runners/: castle.py
src/configs/: castle_experiments.json  cleanvul_experiments.json  context_assembler_experiments.json  cvefixes_experiments.json  jitvul_experiments.json  primevul_experiments.json  vulbench_experiments.json  vuldetectbench_experiments.json  vulnerabilitydetection_experiments.json
src/configs/castle/: datasets.json  experiments.json
src/configs/cleanvul/: datasets.json
src/configs/context_assembler/: datasets.json  experiments.json
src/configs/context_assembler_compare_rankings/: datasets.json  experiments.json
src/configs/cvefixes/: datasets.json  experiments.json
src/datasets/: __init__.py  data_utils.py  setup_jitvul_dataset.py
src/entrypoints/: __init__.py  prepare_cvefixes_datasets.py  run_calc_stats_for_datasets.py  run_castle_benchmark.py  run_castle_experiment.py  run_castle_experiments.py  run_cvefixes_benchmark.py  run_cvefixes_experiments.py  run_jitvul_benchmark.py  run_setup_castle_dataset.py  run_unified_benchmark.py  run_vulbench_benchmark.py  run_vuldetectbench_benchmark.py  run_vulnerabilitydetection_benchmark.py  setup_cleanvul_dataset.py  setup_primevul_dataset.py  utils.py
src/llm/: anthropic_backend.py  base_online_backend.py  factory.py  hugging_face.py  llama_cpp_backend.py  llm.py  online_backend.py  openai_backend.py  vllm_backend.py
src/scripts/: process_vulbench_data.py  process_vuldetectbench_data.py  process_vulnerabilitydetection_data.py  test_llama_cpp_backend.py  validate_generated_datasets.py
(+805 files in other folders)
