[project]
name = "llm4codesec-llm-benchmark"
version = "0.1.0"
description = ""
authors = [{ name = "vodkar", email = "boombarah@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "packaging>=25.0,<26",
    "tiktoken>=0.9.0,<0.10",
    "protobuf>=6.31.1,<7",
    "ipykernel>=6.29.5,<7",
    "pydantic>=2.12.5",
    "typer>=0.16.1,<0.17",
]

[project.optional-dependencies]
hf = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "transformers>=4.51.0",
    "tokenizers>=0.14.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.49.1",
    "datasets>=2.14.0",
    "huggingface-hub[hf_xet]>=0.32.4,<0.33",
]
vllm = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "vllm>=0.6.6",
    "ninja>=1.11.1.4,<2",
    "fbgemm-gpu>=1.4.1; platform_system != 'Darwin' or platform_machine != 'arm64'",
]
llama-cpp = [
    "llama-cpp-python>=0.3.1",
]

[project.scripts]
llm4codesec-benchmark = "cli:app"

[dependency-groups]
dev = [
  "ruff>=0.11.13,<0.12",
  "mypy>=1.19.1",
  "pandas-stubs>=2.2.3.250308",
  "scipy-stubs>=1.16.1.0",
]
analytics = [
    "matplotlib>=3.10.3,<4",
    "seaborn>=0.13.2,<0.14",
    "plotly>=6.2.0,<7",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "analytics",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "platform_system != 'Darwin' or platform_machine != 'arm64'" }
]
torchvision = [
  { index = "pytorch", marker = "platform_system != 'Darwin' or platform_machine != 'arm64'" }
]
torchaudio = [
  { index = "pytorch", marker = "platform_system != 'Darwin' or platform_machine != 'arm64'" }
]
fbgemm-gpu = [
  { index = "pytorch", marker = "platform_system != 'Darwin' or platform_machine != 'arm64'" }
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.12"
files = ["src"]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
